feat: add Addon and Backup management features (master)
THIS UPDATE CHANGES THE subArgs SubCommand METHOD SIGNATURE. BE SURE TO CHANGE IT ASWELL.

Code Update to 8.8.0

- Implemented AddonClassLoader for loading addons with dependency handling.
- Introduced BackupExecuteRunnable for executing backups.
- Enhanced APDependencyManager to manage dependencies with Ezlib.
- Updated Utils to allow file replacement during unzip operation.
- Refactored BackupManager for periodic backup tasks.
- Improved AddonLoader with custom class loader support and dependency checks.
- Added DependencyManager for handling addon and plugin dependencies.
- Integrated Maven Dependency loading using EzlibLoader.
- Added AddonCommandManager and related subcommands for addon management.
- Implemented PlayerEventHandler for permission handling on player events.
- Introduced AddonLogger for consistent logging in addons.