@@ -1,50 +1,40 @@
-package de.happybavarian07.adminpanel.addonloader.loadingutils;/*
- * @Author HappyBavarian07
- * @Date 12.01.2022 | 16:56
- */
+package de.happybavarian07.adminpanel.addonloader.loadingutils;
 
 import de.happybavarian07.adminpanel.addonloader.api.Addon;
 import de.happybavarian07.adminpanel.addonloader.utils.FileUtils;
-import de.happybavarian07.adminpanel.main.AdminPanelMain;
 import de.happybavarian07.adminpanel.utils.LogPrefix;
+import de.happybavarian07.adminpanel.main.AdminPanelMain;
+import de.happybavarian07.adminpanel.utils.StartUpLogger;
 import org.bukkit.ChatColor;
-import org.jetbrains.annotations.NotNull;
 
 import java.io.File;
 import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
-import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.logging.Level;
 import java.util.jar.JarEntry;
 import java.util.jar.JarInputStream;
-import java.util.logging.Level;
 
-/**
- * The AddonLoader Class
- */
 public class AddonLoader {
     private static AdminPanelMain plugin;
     private final Map<File, List<Class<?>>> loadedJarFiles;
     private final Map<File, Addon> loadedAddonMainClasses;
+    private final Map<String, File> addonNamesToFiles;
+    private final Map<File, AddonClassLoader> addonClassLoaders; // New map to store AddonClassLoaders
     private final File addonFolder;
-    private final URLClassLoader urlClassLoader;
+    private final StartUpLogger logger;
 
-    /**
-     * The Constructor of the AddonLoader
-     * @param addonFolder The Folder where the Addons are located
-     */
     public AddonLoader(File addonFolder) {
         plugin = AdminPanelMain.getPlugin();
+        this.logger = plugin.getStartUpLogger();
         this.addonFolder = addonFolder;
         this.loadedJarFiles = new HashMap<>();
         this.loadedAddonMainClasses = new HashMap<>();
-        this.urlClassLoader = new URLClassLoader(new URL[]{}, ClassLoader.getSystemClassLoader());
+        this.addonNamesToFiles = new HashMap<>();
+        this.addonClassLoaders = new HashMap<>(); // Initialize the map
 
         if (!addonFolder.isDirectory()) {
             addonFolder.mkdir();
@@ -53,63 +43,26 @@ public class AddonLoader {
         for (File jarFile : jarfiles) {
             plugin.getStartUpLogger().coloredMessage(ChatColor.BLUE, jarFile.toString());
             loadedJarFiles.put(jarFile, null);
-            //loadLibrary(new File(jarFile.getName()));
         }
     }
 
-    /**
-     * Finds a Class in a Jar File
-     * @param file The Jar File
-     * @param clazz The Class
-     * @return The Class
-     * @param <T> The Class
-     * @throws IOException If the File doesn't exist
-     * @throws ClassNotFoundException If the Class doesn't exist
-     */
-    public static <T> Class<? extends T> findClass(@NotNull final File file,
-                                                   @NotNull final Class<T> clazz) throws IOException, ClassNotFoundException {
-        if (!file.exists()) {
-            return null;
-        }
-
-        final URL jar = file.toURI().toURL();
-        final URLClassLoader loader = new URLClassLoader(new URL[]{jar}, clazz.getClassLoader());
-        final List<String> matches = new ArrayList<>();
-        final List<Class<? extends T>> classes = new ArrayList<>();
-
-        try (final JarInputStream stream = new JarInputStream(jar.openStream())) {
-            JarEntry entry;
-            while ((entry = stream.getNextJarEntry()) != null) {
-                final String name = entry.getName();
-                if (!name.endsWith(".class")) {
-                    continue;
-                }
-
-                matches.add(name.substring(0, name.lastIndexOf('.')).replace('/', '.'));
-            }
-
-            for (final String match : matches) {
-                try {
-                    final Class<?> loaded = loader.loadClass(match);
-                    if (clazz.isAssignableFrom(loaded)) {
-                        classes.add(loaded.asSubclass(clazz));
-                    }
-                } catch (final NoClassDefFoundError ignored) {
-                }
-            }
-        }
-        if (classes.isEmpty()) {
-            loader.close();
-            return null;
-        }
-        return classes.get(0);
+    public Map<File, List<Class<?>>> getLoadedJarFiles() {
+        return loadedJarFiles;
     }
 
-    /**
-     * Finds all Jar Files in a Folder
-     * @param folder The Folder
-     * @return The Jar Files
-     */
+    public File getAddonFolder() {
+        return addonFolder;
+    }
+
+    public File getAddonFile(Addon addon) {
+        for (File file : loadedAddonMainClasses.keySet()) {
+            if (loadedAddonMainClasses.get(file).equals(addon)) {
+                return file;
+            }
+        }
+        return null;
+    }
+
     public List<File> findJarFiles(File folder) {
         List<File> jarFiles = new ArrayList<>();
         File[] files = folder.listFiles();
@@ -122,20 +75,12 @@ public class AddonLoader {
         return jarFiles;
     }
 
-    /**
-     * Loads an Addon
-     * @param addon The Addon
-     * @return The Classes of the Addon
-     * @throws IOException If the File doesn't exist
-     * @throws ClassNotFoundException If the Class doesn't exist
-     */
     public List<Class<?>> loadAddon(File addon) throws IOException, ClassNotFoundException {
         if (!addon.exists()) {
             return null;
         }
 
         final URL jar = addon.toURI().toURL();
-        final URLClassLoader loader = new URLClassLoader(new URL[]{jar}, urlClassLoader);
         final List<String> classNames = new ArrayList<>();
         List<Class<?>> classes = new ArrayList<>();
 
@@ -152,7 +97,9 @@ public class AddonLoader {
 
             for (final String names : classNames) {
                 try {
-                    final Class<?> loaded = loader.loadClass(names);
+                    Addon addonTemp = getMainClassOfAddon(addon, true);
+                    Class<?> loaded = addonTemp.getClassLoader().loadClass(names);
+
                     classes.add(loaded);
                 } catch (final NoClassDefFoundError ignored) {
                 }
@@ -160,7 +107,6 @@ public class AddonLoader {
         }
 
         if (classes.isEmpty()) {
-            loader.close();
             return null;
         }
 
@@ -168,103 +114,170 @@ public class AddonLoader {
         return classes;
     }
 
-    /**
-     * Returns the Main Class of an Addon
-     * @param addon The Addon
-     * @return The Main Class
-     */
-    public Addon getMainClassOfAddon(File addon) {
+    public Addon getMainClassOfAddon(File addon, boolean addToMap) {
         try {
-            if(loadedAddonMainClasses.containsKey(addon)) {
+            if (loadedAddonMainClasses.containsKey(addon)) {
                 return loadedAddonMainClasses.get(addon);
             } else {
-                Addon temp;
+                Addon temp = null;
                 try {
-                    temp = FileUtils.findClass(addon, Addon.class).newInstance();
-                } catch (NullPointerException e){
-                    temp = null;
+                    temp = FileUtils.findClass(addon, Addon.class).getDeclaredConstructor().newInstance();
+                    checkValidAddonValues(temp);
+                } catch (NullPointerException e) {
+                    if (temp == null) {
+                        plugin.getFileLogger().writeToLog(Level.SEVERE, "The Addon " + addon.getName() + " has no valid Addon Values or doesn't exist entirely!", LogPrefix.ADDONLOADER);
+                        throw new NullPointerException("The Addon " + addon.getName() + " has no valid Addon Values or doesn't exist entirely!");
+                    }
+                } catch (InvocationTargetException | NoSuchMethodException e) {
+                    throw new RuntimeException(e);
                 }
-                loadedAddonMainClasses.put(addon, temp);
+
+                // Create a custom ClassLoader to load classes from the addon's JAR
+                AddonClassLoader addonClassLoader = new AddonClassLoader(getClass().getClassLoader(), null, addon);
+
+                // Try and unload the Main Class that got loaded by the old one, because it has to be loaded by the Addon Class Loader
+                String className = temp.getClass().getName();
+                loadedAddonMainClasses.remove(addon);
+                temp.getClass().getClassLoader().clearAssertionStatus(); // Clear the assertion status of the class
+                ((URLClassLoader) temp.getClass().getClassLoader()).close();
+
+                // Load the main class without initializing it
+                Class<?> mainClass = addonClassLoader.loadClass(className, false);
+                // Initialize the Addon instance
+                temp = (Addon) mainClass.getDeclaredConstructor().newInstance();
+                addonClassLoader.initialize(temp);
+
+                if (addToMap) {
+                    addonClassLoaders.put(addon, addonClassLoader); // Store the AddonClassLoader
+                    loadedAddonMainClasses.put(addon, temp);
+                    addonNamesToFiles.put(temp.getName(), addon);
+                }
                 return temp;
             }
-        } catch (IOException | ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+        } catch (IOException | ClassNotFoundException | InstantiationException | IllegalAccessException |
+                 NoSuchMethodException | InvocationTargetException e) {
             e.printStackTrace();
         }
         return null;
     }
 
-    /*
-     * Adds the supplied Java Archive library to java.class.path. This is benign
-     * if the library is already loaded.
-     */
-    public synchronized void loadLibrary(File jar) {
-        try {
-            /*We are using reflection here to circumvent encapsulation; addURL is not public*/
-            URLClassLoader loader = this.getUrlClassLoader();
-            URL url = jar.toURI().toURL();
-            /*Disallow if already loaded*/
-            for (URL it : loader.getURLs()) {
-                if (it.equals(url)) {
-                    return;
-                }
+    public Addon getAddonMainClassByName(String name) {
+        return loadedAddonMainClasses.get(addonNamesToFiles.get(name));
+    }
+
+    public List<Addon> getLoadedAddons() {
+        List<Addon> addons = new ArrayList<>();
+        for (File file : loadedAddonMainClasses.keySet()) {
+            addons.add(loadedAddonMainClasses.get(file));
+        }
+        return addons;
+    }
+
+    public EnableResult enableAddon(File addonFile, Set<Addon> currentlyEnabling) throws IOException, ClassNotFoundException {
+        if (addonFile == null) return EnableResult.NULL_ADDON;
+        Addon addon = getMainClassOfAddon(addonFile, false);
+
+        if (currentlyEnabling.contains(addon)) {
+            logger.coloredMessage(ChatColor.DARK_RED, "Circular Dependency Detected: " + addon.getName());
+            return EnableResult.CIRCULAR_DEPENDENCY;
+        }
+
+        currentlyEnabling.add(addon);
+        DependencyManager dependencyManager = new DependencyManager(this);
+
+        if (dependencyManager.checkAndLoadPluginDependencies(addon, currentlyEnabling)) {
+            if (!dependencyManager.checkAndLoadMavenDependencies(addon)) {
+                return EnableResult.DEPENDENCY_MISSING;
             }
-        } catch (MalformedURLException e) {
-            e.printStackTrace();
+            initAddon(addon);
+            addon.onEnable();
+            addon.setEnabled(true);
+            plugin.getLogger().log(Level.INFO, "Enabled Addon: " + addon.getName());
+        } else {
+            return EnableResult.DEPENDENCY_MISSING;
+        }
+
+        currentlyEnabling.remove(addon);
+        return EnableResult.SUCCESS;
+    }
+
+    public EnableResult disableAddon(File file) {
+        Addon addon = getMainClassOfAddon(file, false);
+        if (addon == null) {
+            return EnableResult.NULL_ADDON;
+        }
+        if (!addon.isEnabled()) {
+            return EnableResult.ALREADY_ENABLED;
+        }
+        addon.onDisable();
+        addon.setEnabled(false);
+        return EnableResult.SUCCESS;
+    }
+
+    public enum EnableResult {
+        SUCCESS,
+        NULL_ADDON,
+        DEPENDENCY_MISSING,
+        CIRCULAR_DEPENDENCY,
+        ALREADY_ENABLED,
+        ERROR;
+    }
+
+    private void checkValidAddonValues(Addon temp) throws NullPointerException {
+        if (temp.getName() == null || temp.getName().isEmpty()) {
+            throw new NullPointerException("The Addon Name is null or empty!");
+        }
+        if (temp.getVersion() == null || temp.getVersion().isEmpty()) {
+            throw new NullPointerException("The Addon Version is null or empty!");
+        }
+        if (temp.getDescription() == null || temp.getDescription().isEmpty()) {
+            throw new NullPointerException("The Addon Description is null or empty!");
         }
     }
 
-    /**
-     * Returns the URLClassLoader
-     * @return The URLClassLoader
-     */
-    public URLClassLoader getUrlClassLoader() {
-        return urlClassLoader;
-    }
-
-    /**
-     * Returns the Addon Folder
-     * @return The Addon Folder
-     */
-    public File getAddonFolder() {
-        return addonFolder;
-    }
-
-    public Map<File, List<Class<?>>> getLoadedJarFiles() {
-        return loadedJarFiles;
-    }
-
-    /**
-     * Executes a Method from a Class
-     * @param name The Name of the Method
-     * @param clazz The Class
-     * @param args The Arguments
-     * @return The Result of the Method
-     */
-    public Object executeMethod(String name, Class<?> clazz, Object... args) {
-        try {
-            Method m = clazz.getMethod(name);
-            return m.invoke(clazz.getDeclaredConstructor().newInstance(), args);
-        } catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException | InstantiationException e) {
-            e.printStackTrace();
+    public void initAddon(Addon addon) {
+        File addonDataFolder = new File(addonFolder, addon.getName());
+        if (!addonDataFolder.exists()) {
+            addonDataFolder.mkdirs();
         }
-        return null;
+        if(addonClassLoaders.get(addon.getFile()).getAddon() == null) {
+            addonClassLoaders.get(addon.getFile()).initialize(addon);
+        }
+        /*try {
+            Method initMethod = Addon.class.getDeclaredMethod("init", AddonLoader.class, File.class, File.class, AddonClassLoader.class);
+            initMethod.setAccessible(true);
+
+            initMethod.invoke(addon, this, addonDataFolder, addonFile, addonClassLoaders.get(addon.getFile()));
+            initMethod.setAccessible(false);
+        } catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException e) {
+            e.printStackTrace();
+        }*/
     }
 
-    /**
-     * This stops all Addons and makes them unreachable!
-     * !!Use at your own Risk!!
-     * I warned you!
-     */
+
     public void crashAddons() {
-        for(File addonFile : getLoadedJarFiles().keySet()) {
-            getMainClassOfAddon(addonFile).onDisable();
+        for (File addonFile : getLoadedJarFiles().keySet()) {
+            getMainClassOfAddon(addonFile, false).onDisable();
         }
         getLoadedJarFiles().clear();
         try {
-            getUrlClassLoader().close();
+            for (AddonClassLoader classLoader : addonClassLoaders.values()) {
+                classLoader.close();
+            }
+            addonClassLoaders.clear();
         } catch (IOException e) {
             plugin.getFileLogger().writeToLog(Level.SEVERE, "generated an Exception: " + e + "(Messages: " + e.getMessage() + ")", LogPrefix.ADDONLOADER);
             e.printStackTrace();
+        } finally {
+            // Ensure all AddonClassLoaders are closed to prevent memory leaks
+            for (AddonClassLoader classLoader : addonClassLoaders.values()) {
+                try {
+                    classLoader.close();
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
+            }
+            addonClassLoaders.clear(); // Clear the map to allow garbage collection
         }
     }
 }
